--- a/css/index.css
+++ b/css/index.css
@@ -879,16 +879,16 @@ linear-gradient(
   .tooltip-inner {
       background-color: white; 
       color: black; 
-      border: 1px solid grey; 
+      border: 1px solid white; 
       padding: 15px;
       font-size: 10px;
       max-width: 600px !important; 
   }
    .tooltip.right > .tooltip-arrow {
-      border-right: 5px solid grey;
+      border-right: 5px solid white;
   }
   .tooltip.bottom > .tooltip-arrow {
-      border-bottom: 5px solid grey;
+      border-bottom: 5px solid white;
   }
  .hanging-indent {
 	padding-left: 50px;
