--- a/css/index.css
+++ b/css/index.css
@@ -867,7 +867,7 @@ linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-    url("http://www.dickinson.edu/site/custom_scripts/newsImages/dc01.jpg");
+    url("https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/OLD_WEST%2C_DICKINSON_COLLEGE.jpg/1200px-OLD_WEST%2C_DICKINSON_COLLEGE.jpg");
     background-repeat:no-repeat;
    background-attachment: fixed;
     background-size:cover;
