--- a/css/index.css
+++ b/css/index.css
@@ -407,8 +407,8 @@ linear-gradient(
     padding-top:40px;
     color:white;
     font-size:50px;
-    font-family: Lobster;
-    margin-left: 38%;
+    font-family: 'Abel', sans-serif !important;
+    margin-left: 36%;
 
 }
 #awardmain{
@@ -423,7 +423,7 @@ linear-gradient(
     border-color: #0288D1;
     color:white;
    margin-left:12%;
-    font-family: Lobster Two;
+    font-family: 'PT Sans Narrow', sans-serif !important;
     font-size:50px;
     position:relative;
    
